# perso-2026a-deividtrindade777

./: .gitignore  CHANGELOG.md  Dockerfile  FocusFlow.cabal  LICENSE  README.md  render.yaml
.devcontainer/: Dockerfile
app/: Database.hs  Logic.hs  Main.hs  Types.hs
test/: Spec.hs
