cabal-version:      3.0
name:               FocusFlow
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             deividtrindade777
maintainer:         silvadeivi321@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable FocusFlow
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types, Logic, Database
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base ^>=4.18.3.0,
                      scotty,
                      aeson,
                      time,
                      text,
                      http-types,
                      sqlite-simple >= 0.4  && < 0.5
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite focusflow-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          Spec.hs
    other-modules:    Types, Logic
    build-depends:
        base ^>=4.18.3.0,
        HUnit >= 1.6,
        time,
        text,
        aeson